# mailing_agent

./: .env  .env.sample  .gitignore  README.md  pyproject.toml
agent/: admin.py  form.py  models.py  send_mailing.py  urls.py  views.py
agent/migrations/: 0001_initial.py  0002_alter_mailing_mailing_clients.py  0003_client_client_owner_mailing_mailing_owner.py  0004_alter_client_client_owner_and_more.py  0005_alter_mailing_options.py  0006_alter_client_email.py
agent/templates/agent/: base.html  client_confirm_delete.html  client_detail.html  client_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_logs.html
agent/templatetags/: media_filters.py  media_tags.py
blog/: admin.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: home.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: create_mng.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: change_password.html  login.html  register.html  user_confirm_delete.html  user_detail.html  user_form.html  user_list.html
